added simple product-list logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div>
     <app-first-component></app-first-component>
+    <app-product></app-product>
+    <app-product-list></app-product-list>
 </div>
