--- a/src/app/product/component/product-list/product-list.component.html
+++ b/src/app/product/component/product-list/product-list.component.html
@@ -1,4 +1,3 @@
 <p>product list works!</p>
-<ul>
-    <li *ngFor="let item of productSet">{{item.description}}</li>
-</ul>
+
+<app-product *ngFor="let product of productSet " [product]="product"></app-product>
