--- a/src/app/product/component/product/product.component.html
+++ b/src/app/product/component/product/product.component.html
@@ -1,2 +1,8 @@
-<p>product works!</p>
-<button (click)="onBuy()"></button>
+<div class="panel-body">
+    <ul>
+        <li>Product id: {{product.id}}</li>
+        <li>Product name: {{product.name}}</li>
+        <li>Description: {{product.description}}</li>
+        <li>Actual price: {{product.price}}</li>
+    </ul>
+</div>
