finished first task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div>
-    <app-first-component></app-first-component>
-    <app-product-list></app-product-list>
-</div>
+<app-product-list></app-product-list>
+<app-cart-list></app-cart-list>
