--- a/src/app/cart/component/cart-list/cart-list.component.html
+++ b/src/app/cart/component/cart-list/cart-list.component.html
@@ -1,1 +1,8 @@
-<p>cart-list works!</p>
+<div *ngIf="items.size == 0; else elseBlock">cart-list is empty</div>
+<ng-template #elseBlock>
+    <h1>Your bucket:</h1>
+    <ul *ngFor="let item of items">
+        <li>{{item.name}}</li>
+    </ul>
+    <button (click)="onClear()">clear</button>
+</ng-template>
