--- a/src/app/product/component/product/product.component.html
+++ b/src/app/product/component/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="panel-body">
     <ul>
-        <li>Product id: {{product.id}}</li>
         <li>Product name: {{product.name}}</li>
         <li>Description: {{product.description}}</li>
         <li>Actual price: {{product.price}}</li>
+        <li><button (click)='onAdd(product)'>Add to card</button></li>
     </ul>
 </div>
