--- a/src/app/product/component/product-list/product-list.component.html
+++ b/src/app/product/component/product-list/product-list.component.html
@@ -1,3 +1,3 @@
-<p>product list works!</p>
+<p>Avalible products list: </p>
 
 <app-product *ngFor="let product of productSet " [product]="product"></app-product>
