--- a/src/app/cart-module/cart/component/cart-list/cart-list.component.html
+++ b/src/app/cart-module/cart/component/cart-list/cart-list.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="cartItems === null || cartItems.length == 0; else elseBlock">cart-list is empty</div>
+<div appHighlight *ngIf="cartItems === null || cartItems.length == 0; else elseBlock">cart-list is empty</div>
 <ng-template #elseBlock>
     <h1>Your bucket:</h1>
     <ul *ngFor="let item of cartItems">
-        <li>{{item.name}}</li>
+        <li appHighlight>{{item.name}}</li>
     </ul>
     <div>total cost is: {{totalCost}}</div>
     <div>total amount is: {{totalAmount}}</div>
